<resources>
    <string name="app_name">Anamoly</string>
    <string name="error_field_required">This field is required.</string>
    <string name="error_invalid_email_address">Invalid Email Address</string>
    <string name="error_password_required">Password must include one digit and a capital letter</string>
    <string name="error_password_not_match">Confirm password don\'t match with new password</string>
    <string name="error_invalid_postal_code">Invalid Postal Code</string>
    <string name="title_activity_product_detail">ProductDetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="swedish">Swedish</string>
    <string name="english">English</string>
    <string name="new_customer">New User</string>
    <string name="existing_customer">Existing User</string>
    <string name="email_address">Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="postal_code">Postal Code</string>
    <string name="first_name">First Name</string>
    <string name="company_name">Company Name</string>
    <string name="company_id_number">Company ID Number</string>
    <string name="house_no">House No</string>
    <string name="adon_no">House Number Addition</string>
    <string name="i_am_a_company">I am a company</string>
    <string name="send">Send</string>
    <string name="we_will_send_you_recovery_link_to_your_registered_email_address_to_reset_password">We will send you recovery link to your registered email address to reset password.</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="last_name">Last Name</string>
    <string name="forgot_password2">Forgot Password</string>
    <string name="need_help">Need Help?</string>
    <string name="app_settings">App Settings</string>
    <string name="you_may_manage_settings_of_notifications_and_emails">You may manage settings of notifications and emails</string>
    <string name="general_push_notifications">General Push Notifications</string>
    <string name="push_notification_on_orders">Push Notification On Orders</string>
    <string name="general_emails">General Emails</string>
    <string name="emails_on_orders">Emails On Orders</string>
    <string name="save_and_continue">Save and Continue</string>
    <string name="how_many_i_help_you">How many I help you?</string>
    <string name="feel_free_to_contact_us_if_need_any_help_of_support">Feel free to contact us if need any help of support</string>
    <string name="full_name">Full Name</string>
    <string name="phone_no">Phone No.</string>
    <string name="write_your_message_here">Write your message here...</string>
    <string name="quick_contact">Quick Contact</string>
    <string name="contact">Contact</string>
    <string name="share_app">Share App</string>
    <string name="share_app_with_your_fiends">Share app with your fiends.</string>
    <string name="here_each_user_can_share_this_app_by_facebook_whatsapp_or_email_and_can_receive_discount_code_if_fiends_will_register_both_friend_s_and_the_user_will_receive_this_discount_code">Here each user can share this App by Facebook, WhatsApp or Email and can receive discount code if fiends will register. Both friend(s) and the user will receive this discount code.</string>
    <string name="my_orders">My Orders</string>
    <string name="settings">Settings</string>
    <string name="discount_on_share_app">Discount on Share app</string>
    <string name="app_instruction">App Instruction</string>
    <string name="contact_us">Contact Us</string>
    <string name="facebook">Facebook</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="email">Email</string>
    <string name="terms_and_conditions_apply">*Terms and conditions apply</string>
    <string name="my_profile">My Profile</string>
    <string name="email_id">Email ID</string>
    <string name="address">Address</string>
    <string name="home_situation">Home Situation</string>
    <string name="save">Save</string>
    <string name="number_of_people_child_s_and_pets_in_your_family">Number of people, child\'s and pets in your family</string>
    <string name="adults">Adults</string>
    <string name="child">Children</string>
    <string name="dogs">Dogs</string>
    <string name="cat">Cats</string>
    <string name="thanks_fo_your_registration">Thanks for your Registration</string>
    <string name="you_can_in_the_queue_wait_until_administrator_confirm_your_registration">Wait until administrator confirm your registration</string>
    <string name="waiting_list_no">Waiting List Number</string>
    <string name="we_will_send_you_a_message_as_soon_as_you_can_order">We will send you a message as soon as you can order</string>
    <string name="close">Close</string>
    <string name="contact_us_if_need_help">Contact us if you need help</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="change_address">Change Address</string>
    <string name="street">Street</string>
    <string name="area">Area</string>
    <string name="house_ad_on">House Number Addition</string>
    <string name="verify_and_apply">Verify and apply</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="type_your_coupon_code_here">Type your coupon code here</string>
    <string name="checkout">Checkout</string>
    <string name="amount">Amount</string>
    <string name="do_you_have_coupon">Do you have coupon ?</string>
    <string name="how_would_you_pay">How would you pay ?</string>
    <string name="ideal">Online</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="continues">Continue</string>
    <string name="discount">Discount</string>
    <string name="total_amount">Total Amount</string>
    <string name="delivery">Delivery</string>
    <string name="cart">Cart</string>
    <string name="user_account">User Account</string>
    <string name="prefered_delivery_time">Preferred Delivery Time</string>
    <string name="ordered_from_us_delivered_to_your_home">Ordered from us Delivered to your home</string>
    <string name="ordered_from_us">Ordered from us</string>
    <string name="delivered_to_your_home">Delivered to your home</string>
    <string name="type_your_search">Type your search</string>
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="qty">Qty :</string>
    <string name="order_details">Order Details</string>
    <string name="re_order">Re Order</string>
    <string name="track">Track</string>
    <string name="Discount">Discount</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="verification_code">Verification Code</string>
    <string name="pending">Pending</string>
    <string name="confirmed">Confirmed</string>
    <string name="out_for_delivery">Out for Delivery</string>
    <string name="delivered">Delivered</string>
    <string name="declined">Declined</string>
    <string name="canceled">Canceled</string>
    <string name="thanks_for_your_order">Thanks for your Order</string>
    <string name="your_order_place_successfully">Your order has been placed successfully</string>
    <string name="booking_details">Order Details</string>
    <string name="order_id">Order No.</string>
    <string name="date">Date</string>
    <string name="total_items">Total Items</string>
    <string name="subtotal">Subtotal</string>
    <string name="gateway_charges">Gateway Charges</string>
    <string name="total_paid">Total Paid</string>
    <string name="continue1">Continue</string>
    <string name="coupon">Coupon</string>
    <string name="off">Off</string>
    <string name="flat">Flat</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="notifications">Notifications</string>
    <string name="retry_to_connect">Retry to Connect</string>
    <string name="missing_any_product">Missing Any Product?</string>
    <string name="request_new">Request New</string>
    <string name="suggest_missing_products">Suggest missing products</string>
    <string name="ex_organic_banana_5_nos">Ex. Organic Banana, Strawberry, etc.</string>
    <string name="upload_product_image_optional">Upload Product Image (Optional)</string>
    <string name="are_you_sure_you_want_to_clear_cart">Are you sure! you want to clear cart?</string>
    <string name="if_you_re_order_your_product_than_old_cart_data_is_cleared_and_re_order_data_will_added">If you reorder your product than old cart data is cleared and reorder data will added.</string>
    <string name="re_order_done">Reorder Done</string>
    <string name="order_tracking">Order Tracking</string>
    <string name="payment_success_but_unable_to_save_order">Payment success but unable to save order</string>
    <string name="unable_to_make_payment">Unable to make payment</string>
    <string name="download_the_app_from_this_link">Download the app from this link:</string>
    <string name="greetings">Greetings</string>
    <string name="yet_use_my_code_with_your_first_order_and_we_both_get_a">yet? Use my code with your first order and we both get a</string>
    <string name="have_you_tried">Have you tried</string>
    <string name="yet">yet?</string>
    <string name="delivery_within">Delivery within</string>
    <string name="extra">extra</string>
    <string name="you_have_chosen_express_delivery_unfortunately_not_all_products_you_have_chosen_can_be_delivered_with_express_delivery_please_double_check_your_order_and_remove_non_express_products_from_your_cart_if_you_still_want_to_order_the_products_choose_another_time_for_delivery">You have chosen EXPRESS delivery, unfortunately not all products you have chosen can be delivered with EXPRESS delivery! Please double check your order and remove non-EXPRESS products from your cart!</string>
    <string name="attention_nthe_products_with_express_icon_are_immediately_available">Attention!\nThe products with EXPRESS icon are immediately available!</string>
    <string name="un_paid">Unpaid</string>
    <string name="paid">Paid</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="please_type_the_verification_code_sent_to">Please type the verification code sent to</string>
    <string name="re_send">Re-send</string>
    <string name="verify">Verify</string>
    <string name="will_be_there_in">will be there in</string>
    <string name="vegetables_fruit">Groente Fruit</string>
    <string name="food_stuffs">Levensmiddelen</string>
    <string name="meat_poultry">Vlees Gevogelte</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="cart_info">Cart Info</string>
    <string name="please_wait_until_finish_transaction">Please wait until finish transaction</string>
    <string name="free">free</string>
    <string name="fors">for</string>
    <string name="when_can_i_start">When can i start?</string>
    <string name="that_may_take_a_while_but_we_are_working_hard_on_it_new_cars_and_delivery_drivers_are_taking_to_the_streets_every_week">that may take a while, but we are working hard on it, new cars and delivery drivers are taking to the streets every week</string>
    <string name="choose_language">Choose Language</string>
    <string name="arabic">Arabic</string>
    <string name="turkish">Turkish</string>
</resources>