<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_choose_language"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/xml_rounded_corner_top"
    android:orientation="vertical"
    android:paddingStart="@dimen/space_30"
    android:paddingLeft="@dimen/space_30"
    android:paddingEnd="@dimen/space_30"
    android:paddingRight="@dimen/space_30"
    android:paddingBottom="@dimen/space_20">

    <View
        android:id="@+id/view_dash"
        android:layout_width="@dimen/space_40"
        android:layout_height="@dimen/space_3"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/space_20"
        android:layout_marginBottom="@dimen/space_20"
        android:background="@drawable/xml_rounded_orange" />

    <CustomViews.TextViewMedium
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/choose_language"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_20" />

    <CustomViews.ButtonMedium
        android:id="@+id/btn_choose_language_english"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_10"
        android:background="@drawable/xml_view_red"
        android:gravity="center"
        android:text="@string/english"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_18"
        app:buttonType="first"
        app:cornerRadius="@dimen/space_5"
        app:disableOnline="true" />

    <CustomViews.ButtonMedium
        android:id="@+id/btn_choose_language_swedish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_10"
        android:background="@drawable/xml_view_red"
        android:gravity="center"
        android:text="@string/swedish"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_18"
        app:buttonType="first"
        app:cornerRadius="@dimen/space_5"
        app:disableOnline="true" />

    <CustomViews.ButtonMedium
        android:id="@+id/btn_choose_language_arabic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_10"
        android:background="@drawable/xml_view_red"
        android:gravity="center"
        android:text="@string/arabic"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_18"
        app:buttonType="first"
        app:cornerRadius="@dimen/space_5"
        app:disableOnline="true" />

    <CustomViews.ButtonMedium
        android:id="@+id/btn_choose_language_turkish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_10"
        android:background="@drawable/xml_view_red"
        android:gravity="center"
        android:text="@string/turkish"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_18"
        app:buttonType="first"
        app:cornerRadius="@dimen/space_5"
        app:disableOnline="true" />

</LinearLayout>