<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".view.forgot_password.ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBG"
        android:orientation="vertical"
        android:padding="@dimen/space_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/space_15">

            <CustomViews.TextViewMedium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/forgot_password2"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_20" />

            <CustomViews.TextViewRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/we_will_send_you_recovery_link_to_your_registered_email_address_to_reset_password"
                android:textAlignment="viewStart"
                android:textColor="@color/colorTextHint"
                android:textSize="@dimen/text_12" />

            <CustomViews.EditTextRegular
                android:id="@+id/et_forgot_password_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_20"
                android:ems="10"
                android:gravity="bottom|start"
                android:hint="@string/your_email_address"
                android:inputType="textEmailAddress"
                android:textAlignment="viewStart"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorTextHint" />

        </LinearLayout>

        <CustomViews.ButtonMedium
            android:id="@+id/btn_forgot_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/xml_view_purple"
            android:gravity="center"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_18"
            app:cornerRadius="@dimen/space_5" />

    </LinearLayout>

</ScrollView>