<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_30"
        app:cardCornerRadius="@dimen/space_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/space_5">

            <CustomViews.TextViewMedium
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="@dimen/space_5"
                android:text="@string/choose_photo"
                android:textAlignment="viewStart"
                android:textColor="@color/colorText"
                android:textSize="@dimen/text_18" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_1"
                android:layout_marginTop="@dimen/space_5"
                android:layout_marginBottom="@dimen/space_5"
                android:background="@color/colorDivider" />

            <CustomViews.TextViewRegular
                android:id="@+id/tv_choose_image_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="@dimen/space_5"
                android:text="@string/take_photo"
                android:textAlignment="viewStart"
                android:textColor="@color/colorText"
                android:textSize="@dimen/text_16" />

            <CustomViews.TextViewRegular
                android:id="@+id/tv_choose_image_gallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="@dimen/space_5"
                android:text="@string/choose_from_gallery"
                android:textAlignment="viewStart"
                android:textColor="@color/colorText"
                android:textSize="@dimen/text_16" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_1"
                android:background="@color/colorDivider" />

            <CustomViews.TextViewMedium
                android:id="@+id/tv_choose_image_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="start"
                android:padding="@dimen/space_10"
                android:text="@string/cancel"
                android:textAlignment="viewStart"
                android:textColor="@color/colorText"
                android:textSize="@dimen/text_18" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>