<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.LoginActivity">

    <ImageView
        android:id="@+id/iv_login_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/ic_logo_login"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/space_30">


                <CustomViews.TextViewMedium
                    android:id="@+id/tv_login_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:autoSizeMaxTextSize="20sp"
                    android:autoSizeMinTextSize="@dimen/text_14"
                    android:autoSizeTextType="uniform"
                    android:gravity="center"
                    android:text="@string/ordered_from_us_delivered_to_your_home"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <CustomViews.EditTextRegular
                    android:id="@+id/et_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_10"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="@dimen/space_10"
                    android:ems="10"
                    android:gravity="bottom|start"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorText"
                    android:textColorHint="@color/colorTextHint" />

                <CustomViews.EditTextRegular
                    android:id="@+id/et_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="@dimen/space_10"
                    android:ems="10"
                    android:gravity="bottom|start"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorText"
                    android:textColorHint="@color/colorTextHint" />

                <CustomViews.ButtonMedium
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_10"
                    android:background="@drawable/xml_view_purple"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_18"
                    app:cornerRadius="@dimen/space_5" />

                <TextView
                    android:id="@+id/tv_login_forgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/space_5"
                    android:paddingTop="@dimen/space_5"
                    android:paddingBottom="@dimen/space_5"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorOrange" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>