<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_30"
        app:cardCornerRadius="@dimen/space_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/space_5">

            <CustomViews.TextViewMedium
                android:id="@+id/tv_common_alert_dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_5"
                android:layout_marginTop="@dimen/space_5"
                android:layout_marginEnd="@dimen/space_5"
                android:gravity="center"
                android:text="@string/cart"
                android:textColor="@color/colorText"
                android:textSize="22sp" />

            <CustomViews.TextViewMedium
                android:id="@+id/tv_common_alert_dialog_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_5"
                android:layout_marginTop="@dimen/space_10"
                android:layout_marginEnd="@dimen/space_5"
                android:gravity="center"
                android:text="@string/are_you_sure_you_want_to_clear_cart"
                android:textSize="@dimen/text_16" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_1"
                android:layout_marginTop="@dimen/space_10"
                android:background="@color/colorDivider" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CustomViews.TextViewMedium
                    android:id="@+id/tv_alert_dialog_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/space_10"
                    android:text="@string/cancel"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/text_18" />

                <CustomViews.TextViewMedium
                    android:id="@+id/tv_alert_dialog_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_5"
                    android:gravity="center"
                    android:padding="@dimen/space_10"
                    android:text="@string/ok"
                    android:textColor="@color/colorOrange"
                    android:textSize="@dimen/text_18" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>